--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__/**
 .ipynb_checkpoints/**
 Immunofluorescence images/**
 Blob detected/**
-Dataser/**
+Dataset/**
 
 # Thumbnail cache files
 ._*
